--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <link rel="stylesheet" href="/bio.86940116.css">
-    <link rel="stylesheet" href="/openSource.2ccf7a35.css">
-    <link rel="stylesheet" href="/projects.23757ab2.css">
-    <link rel="stylesheet" href="/reset.8f26026f.css">
-    <link rel="stylesheet" href="/skills.8ecee196.css">
-    <link rel="stylesheet" href="/others.c47bab93.css">
-    <link rel="stylesheet" href="/certificate.26a8cd14.css">
-    <link rel="stylesheet" href="/education.c506ea8d.css">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
+    />
+    <link rel="stylesheet" href="./style/bio.css" />
+    <link rel="stylesheet" href="./style/openSource.css" />
+    <link rel="stylesheet" href="./style/projects.css" />
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/skills.css" />
+    <link rel="stylesheet" href="./style/others.css" />
+    <link rel="stylesheet" href="./style/certificate.css" />
+    <link rel="stylesheet" href="./style/education.css" />
     <title>我的简历</title>
-    <style media="print">body {
+    <style media="print">
+      body {
         margin: 0;
       }
 
@@ -23,8 +27,10 @@
 
       article {
         padding: 2em;
-      }</style>
-    <style>@media (max-width: 500px) {
+      }
+    </style>
+    <style>
+      @media (max-width: 500px) {
         body {
           margin: 0;
         }
@@ -41,15 +47,16 @@
         .skills .wrapper {
           flex-direction: column;
         }
-      }</style>
-  <script src="/bio.86940116.js"></script><script src="/openSource.2ccf7a35.js"></script><script src="/projects.23757ab2.js"></script><script src="/reset.8f26026f.js"></script><script src="/skills.8ecee196.js"></script><script src="/others.c47bab93.js"></script><script src="/certificate.26a8cd14.js"></script><script src="/education.c506ea8d.js"></script></head>
+      }
+    </style>
+  </head>
 
   <body>
     <article>
       <section class="bio">
         <div>
           <h2>王俊然</h2>
-          <img src="/photo.a2d58053.jpg" alt="">
+          <img src="./images/photo.jpg" alt="" />
         </div>
         <p>
           电话：<a href="tel:13516724981">135-1672-4981</a> | 微信：13867223154
@@ -94,8 +101,16 @@
             <header>
               <h4><strong>记了个账 Vue 版</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/money-lover" target="_blank">源码地址</a>
-                <a href="http://jarrett0817.gitee.io/money-lover-website" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/money-lover"
+                  target="_blank"
+                  >源码地址</a
+                >
+                <a
+                  href="http://jarrett0817.gitee.io/money-lover-website"
+                  target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>
@@ -116,8 +131,16 @@
             <header>
               <h4><strong>记了个账 React 版</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/monry-lover-react" target="_blank">源码地址</a>
-                <a href="http://jarrett0817.gitee.io/money-lover-react-website" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/monry-lover-react"
+                  target="_blank"
+                  >源码地址</a
+                >
+                <a
+                  href="http://jarrett0817.gitee.io/money-lover-react-website"
+                  target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>
@@ -131,8 +154,16 @@
             <header>
               <h4><strong>Lazyer UI</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/lazyer-ui" target="_blank">源码地址</a>
-                <a href="http://jarrett0817.gitee.io/lazyer-ui-website" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/lazyer-ui"
+                  target="_blank"
+                  >源码地址</a
+                >
+                <a
+                  href="http://jarrett0817.gitee.io/lazyer-ui-website"
+                  target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>
@@ -144,7 +175,8 @@
               实现了按钮、开关、弹出框、标签页、下拉菜单等常见组件，后续会持续制作更多组件
             </p>
             <p>
-              3. 使用了 vue3 的<strong> Composition API</strong>，setup、onMounted、watchEffect、ref、computed等
+              3. 使用了 vue3 的<strong> Composition API</strong
+              >，setup、onMounted、watchEffect、ref、computed等
             </p>
             <p>
               4. 自制了官网，对每个组件用例进行介绍和展示，官网适配PC及移动端
@@ -154,8 +186,16 @@
             <header>
               <h4><strong>seeker导航</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/seeker-navigation" target="_blank">源码地址</a>
-                <a href="http://jarrett0817.gitee.io/seeker-navigation/" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/seeker-navigation"
+                  target="_blank"
+                  >源码地址</a
+                >
+                <a
+                  href="http://jarrett0817.gitee.io/seeker-navigation/"
+                  target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>1. 使用 <strong>jQuery</strong> 做的导航网站。</p>
@@ -192,10 +232,16 @@
         <h3>博客/主页</h3>
         <ul>
           <li>
-            <a href="https://juejin.im/user/3940246036687774/posts" target="_blank"><strong>我的博客</strong></a>，目前有40余篇文章
+            <a
+              href="https://juejin.im/user/3940246036687774/posts"
+              target="_blank"
+              ><strong>我的博客</strong></a
+            >，目前有40余篇文章
           </li>
           <li>
-            <a href="https://github.com/Jarrett817" target="_blank"><strong>我的 GitHub</strong></a>，过去三个月提交次数超300次
+            <a href="https://github.com/Jarrett817" target="_blank"
+              ><strong>我的 GitHub</strong></a
+            >，过去三个月提交次数超300次
           </li>
         </ul>
       </section>
@@ -206,8 +252,14 @@
             <header>
               <h4><strong>画一只猫咪老师</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/madara-cat" target="_blank">源码地址</a>
-                <a href="http://jarrett0817.gitee.io/madara-cat" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/madara-cat"
+                  target="_blank"
+                  >源码地址</a
+                >
+                <a href="http://jarrett0817.gitee.io/madara-cat" target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>
@@ -227,8 +279,16 @@
             <header>
               <h4><strong>旋转立方体</strong></h4>
               <span>
-                <a href="https://github.com/Jarrett817/rotating-cube" target="_blank">源码链接</a>
-                <a href="http://jarrett0817.gitee.io/rotating-cube/" target="_blank">项目预览</a>
+                <a
+                  href="https://github.com/Jarrett817/rotating-cube"
+                  target="_blank"
+                  >源码链接</a
+                >
+                <a
+                  href="http://jarrett0817.gitee.io/rotating-cube/"
+                  target="_blank"
+                  >项目预览</a
+                >
               </span>
             </header>
             <p>
@@ -239,7 +299,11 @@
           <li>
             <header>
               <h4><strong>自制 DOM 库</strong></h4>
-              <a href="https://github.com/Jarrett817/dom-encapsulation/blob/master/src/dom.js" target="_blank">源码链接</a>
+              <a
+                href="https://github.com/Jarrett817/dom-encapsulation/blob/master/src/dom.js"
+                target="_blank"
+                >源码链接</a
+              >
             </header>
             <p>实现了元素选择、元素创建、<strong>事件委托</strong>等常见功能</p>
           </li>
@@ -300,6 +364,6 @@
         </ul>
       </section>
     </article>
-    <script src="/main.1f19ae8e.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
