--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./style/others.css" />
     <link rel="stylesheet" href="./style/certificate.css" />
     <link rel="stylesheet" href="./style/education.css" />
+    <link rel="stylesheet" href="./style/internExperience.scss" />
     <title>我的简历</title>
     <style media="print">
       body {
@@ -70,25 +71,16 @@
           <li>
             <header>
               <h4><strong>个推</strong>2020.11-至今</h4>
-              <h5>前端开发实习</h5>
+              <h4>数据部 前端开发实习生</h4>
             </header>
             <p>
               1.
-              参与公司标签平台项目的开发，与后端、测试、UI、产品对接，在理解业务的基础上，进行功能的开发和bug修复，已参与完成四个迭代
+              参与公司标签平台项目的开发，与后端、测试、UI、产品对接，在理解业务的基础上，进行功能的开发和bug修复，参与完成五个迭代
             </p>
-            <p>
-              2. 抽象出通用业务组件如ecahrts图表渲染组件、可配置详情面板、
-              可配置操作栏、级联下拉框、简洁翻页器、日期选择器等等，作为高频出现的组件极大的提高了开发效率
-            </p>
+
+            <p>2. 在组内完成一次关于浏览器渲染原理的分享，受到好评</p>
             <p>
               3.
-              使用工厂模式维护一套echarts配置项，针对业务中高频用到的热力图、象形图、饼图、条形图、柱状图、折线柱形混合图表等图表配置项进行整理，
-              能够“一键”生成基础图表，支持图表定制、图表组合，同时实现了业务逻辑与样式分离，
-              解决了项目场景中中多图表、toolTip定制化且与图表外部数据交杂的问题，提高了代码复用率
-            </p>
-            <p>4. 在组内完成一次关于浏览器渲染原理的分享</p>
-            <p>
-              5.
               积极遵守组内代码规范、格式规范、git提交规范，撰写结构化、易维护、可拓展的代码，并能够持续跟进优化
             </p>
           </li>
@@ -97,6 +89,26 @@
       <section class="projects">
         <h3>项目经历</h3>
         <ol>
+          <li>
+            <header>
+              <h4><strong>数据智能标签平台（公司内部项目）</strong></h4>
+            </header>
+            <p>
+              1.
+              面向分析师的数据智能平台中的标签平台，通过对数据进行标签化的生产管理以及用户画像、
+              数据洞察等手段，帮助企业发现问题、提高效益
+            </p>
+            <p>
+              2. 抽象出通用业务组件如ecahrts图表渲染组件、可配置详情面板、
+              可配置信息栏、级联下拉框、简洁翻页器、日期选择器等等，作为高频出现的组件极大的提高了开发效率
+            </p>
+            <p>
+              3.
+              使用工厂模式维护一套echarts配置项，针对业务中高频用到的热力图、象形图、饼图、条形图、柱状图、折线柱形混合图表等图表配置项进行整理，
+              能够“一键”生成基础图表，支持图表定制、图表组合，同时实现了业务逻辑与样式分离，
+              解决了项目场景中中多图表、toolTip定制化且与图表外部数据交杂的问题，提高了代码复用率
+            </p>
+          </li>
           <li>
             <header>
               <h4><strong>记了个账 Vue 版</strong></h4>
