--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <p>
           基本信息：男 <span class="column-line">|</span>22岁
           <span class="column-line">|</span>
-          应届本科 <span class="column-line">|</span>
+          本科应届生 <span class="column-line">|</span>
           中共党员
         </p>
         <p>
@@ -90,10 +90,10 @@
             <ul>
               <li>
                 参与公司数据智能平台项目的开发，与后端、测试、UI、产品对接，在理解业务的基础上，
-                进行功能的开发和bug修复和产品体验的优化，参与五个迭代
+                进行功能的开发和产品体验的优化，参与五个迭代
               </li>
               <li>
-                积极学习、遵守组内代码规范、格式规范、git提交规范，撰写结构化、易维护、可拓展的代码，并持续跟进优化
+                积极遵守组内代码规范、格式规范、git提交规范，撰写结构化、易维护、可拓展的代码，并持续跟进优化
               </li>
               <li>在组内完成一次关于浏览器渲染原理的分享</li>
             </ul>
@@ -133,9 +133,9 @@
                 等等，作为高频出现的组件极大的提高了开发效率
               </li>
               <li>
-                使用抽象工厂模式针对业务中高频出现的图表配置项进行整合，
-                便于图表的 <strong>定制、扩展</strong>，提高代码复用率，
-                解决项目场景中图表多样化、数据信息定制化且与图表外部数据交杂的问题
+                使用抽象工厂模式封装业务中出现的图表，
+                便于业务相关图表的生成，提高代码复用率，
+                解决项目场景中图表使用频繁、类型多样化的问题
               </li>
             </ul>
           </li>
@@ -273,7 +273,7 @@
             <li>
               熟悉页面制作技巧，能制作<strong>响应式页面</strong>，<strong>高度还原</strong>设计稿
             </li>
-            <li>熟悉 <strong>ES6</strong>，包括 let / const / Promise 等</li>
+            <li>熟悉 <strong>ES6</strong>，包括 Class / Module / Promise 等</li>
             <li>熟悉 <strong> Vue </strong> 及其<strong>响应式原理</strong></li>
             <li>熟悉 <strong>Git</strong> 的使用及其提交规范</li>
             <li>
@@ -309,32 +309,12 @@
                 >
               </span>
             </header>
-            <p>使用 <strong>jQuery</strong> 做的简易导航网站</p>
             <p>
-              实现了搜索栏跳转，及对网址的增删改操作，实现了键盘事件打开对应网址的功能。
+              使用
+              <strong>jQuery</strong>
+              做的简易导航网站，实现了搜索栏、网址管理、键盘事件跳转网址的功能
             </p>
-          </li>
-
-          <li>
-            <header>
-              <h4>旋转立方体</h4>
-              <span>
-                <a
-                  href="https://github.com/Jarrett817/rotating-cube"
-                  target="_blank"
-                  >源码</a
-                >
-                <a
-                  href="http://jarrett0817.gitee.io/rotating-cube/"
-                  target="_blank"
-                  >预览</a
-                >
-              </span>
-            </header>
-            <p>
-              使用 <strong>js </strong> 和
-              <strong>css</strong> 做的一个可鼠标拖动/手指滑动的立方体
-            </p>
+            <p></p>
           </li>
           <li>
             <header>
@@ -360,8 +340,11 @@
       <section class="education">
         <h2>教育经历</h2>
         <p>
-          浙江大学城市学院 <span class="column-line">|</span> 本科
-          <span class="column-line">|</span> 通信工程
+          <label
+            >浙江大学城市学院 <span class="column-line">|</span> 本科
+            <span class="column-line">|</span> 通信工程</label
+          >
+          <label>2017.09 - 至今</label>
         </p>
       </section>
       <div class="split-line"></div>
@@ -405,8 +388,9 @@
       <section class="certificate">
         <h2>证书/奖项</h2>
         <ul>
-          <li>大学英语六级</li>
-          <li>PAT乙级（浙江大学计算机程序设计能力考试）、C语言二级</li>
+          <li>
+            大学英语六级、PAT乙级（浙江大学计算机程序设计能力考试）、C语言二级
+          </li>
           <li>社会工作优秀奖学金、文体一等奖学金</li>
           <li>优秀团干部、优秀学生干部、优秀团员</li>
           <li>校园十佳歌手</li>
